# docugami-langchain

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docugami_langchain/: __init__.py  base_runnable.py  config.py  history.py  prompts.py
docugami_langchain/agents/: __init__.py  base.py  models.py  re_act_agent.py  re_woo_agent.py  rewrite_grader_agent.py  tool_router_agent.py
docugami_langchain/chains/: __init__.py  answer_chain.py
docugami_langchain/document_loaders/: docugami.py
docugami_langchain/output_parsers/: __init__.py  custom_react_json_single_input.py  float.py  line_separated_list.py
docugami_langchain/retrievers/: fused_summary.py  mappings.py
docugami_langchain/tools/: common.py  reports.py  retrieval.py
docugami_langchain/utils/: sql.py  string_cleanup.py  type_detection.py
langchain_docugami/: __init__.py  config.py  document_loaders.py  prompts.py
langchain_docugami/chains/: __init__.py  answer_chain.py  base.py  params.py
langchain_docugami/document_loaders/: docugami.py
langchain_docugami/output_parsers/: __init__.py  timespan.py
langchain_docugami/prompts/: __init__.py  assistant.py  core.py  summaries.py  tools.py
langchain_docugami/retrievers/: __init__.py  fused_summary.py  mappings.py
langchain_docugami/tools/: reports.py  retrieval.py
tests/: common.py  conftest.py  test_answer_chain.py  test_history.py  test_imports.py
tests/agents/: common.py  test_re_act_agent.py  test_re_woo_agent.py  test_rewoo_agent.py  test_tool_router_agent.py
tests/chains/: test_answer_chain.py
tests/chunks/: test_elaborate_chunk_chain.py  test_summarize_chunk_chain.py
tests/document_loaders/: test_docugami_loader.py
tests/documents/: test_describe_document_set_chain.py  test_describe_document_set_chain.txt  test_summarize_document_chain.py
tests/output_parsers/: test_custom_react_json_single_input.py  test_line_separated_list.py
tests/querying/: test_docugami_explained_sql_query_chain.py  test_sql_fixup_chain.py  test_sql_query_explainer_chain.py  test_sql_result_chain.py  test_sql_result_explainer_chain.py  test_suggested_questions_chain_llm.py  test_suggested_report_chain.py
tests/rag/: test_simple_rag_chain.py
tests/unit_tests/: test_docugami_loader.py  test_imports.py
tests/utils/: test_string_cleanup.py  test_type_conversion.py
(+191 files in other folders)
